<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_information"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_owner_name"
        android:layout_marginBottom="40dp" />

    <EditText
        android:id="@+id/edit_text_owner_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_shape_design"
        android:hint="@string/enter_owner_name"
        android:paddingHorizontal="10dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_vehicle_brand"
   />

    <EditText
        android:id="@+id/edit_text_vehicle_brand"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_shape_design"
        android:inputType="text"

        android:hint="@string/enter_vehicle_brand"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_owner_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_vehicle_rto"
     />

    <EditText
        android:id="@+id/edit_text_vehicle_rto"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_shape_design"
        android:hint="@string/enter_vehicle_rto"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_vehicle_number"
 />

    <EditText
        android:id="@+id/edit_text_vehicle_number"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_shape_design"
        android:hint="@string/enter_vehicle_number"
        android:paddingHorizontal="10dp"

        app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_rto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"


      />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn_shape_design"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
