<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_infromation"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_vehicle_number" />


    <EditText
        android:id="@+id/edit_text_vehicle_number"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_shape_design"
        android:hint="@string/enter_vehicle_number"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_owner_name"


        />

    <EditText
        android:id="@+id/edit_text_owner_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_shape_design"
        android:hint="@string/enter_owner_name"
        android:paddingHorizontal="10dp"
        android:inputType="text"
        android:layout_marginTop="-40dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_vehicle_brand"
        />

    <EditText
        android:id="@+id/edit_text_vehicle_brand"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_shape_design"
        android:inputType="text"
        android:layout_marginTop="-40dp"
        android:hint="@string/enter_vehicle_brand"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_owner_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_vehicle_rto"
        />

    <EditText
        android:id="@+id/edit_text_vehicle_rto"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_text_shape_design"
        android:hint="@string/enter_vehicle_rto"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_vehicle_brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_update"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_shape_design"
        android:text="@string/update"
        android:paddingVertical="15dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>